--- a/app-web-backend/appsettings.json
+++ b/app-web-backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": { // informações necessárioas para fazer a criação e manipulação do banco de dados
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=app_web_backend;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
